# kalshiTrader

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_ad.sh  vcpkg.json
include/kalshi/: auth.h  client.h  websocket_client.h
src/: CMakeLists.txt  main.cpp
src/auth/: authenticator.cpp  websocket_client.cpp
src/receiver/: auth.hpp  client.cpp  main.cpp
